samples/_failures_safe/1761470295_cae3a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc19c31f.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_fc19c31f.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_fc19c31f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc19c31f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc19c31f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc19c31f.c:160:17: error: expected declaration or statement at end of input
